including changes from classmates as well as a slideshow with fading

--- a/activities.html
+++ b/activities.html
@@ -6,7 +6,7 @@
 
   <title>Lab 2 - Responsive</title>
   <meta name="description" content="Activities in vermont">
-  <meta name="author" content="David Schadlich">
+  <meta name="author" content="David Schadlich, Jacob Hilton, Katie Lugus">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
@@ -22,7 +22,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="activities.html">Activities</a></li>
 				<li><a href="reserve.html">Reservations</a></li>
-				<li><a href	="contact.html">Contact</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</span>
 	</div>
@@ -32,7 +32,7 @@
 
 
 				<p>
-			<img class="inline_image" src="tent.jpg" align="left" alt="Camping in a tent"/>
+			<img class="inline_image" src="images/tent.jpg" align="left" alt="Camping in a tent"/>
 					Vermont State Parks offer a wide variety of camping experiences, including drive-in campsites, lean-to's, cabins, cottages, remote campsites, group camping areas, and even an inn-style lodge, all surrounded by Vermont's beautiful mountains, lakes, forests and fields. 
 				</p>
 				<p>
@@ -50,7 +50,7 @@
 
 			<hr />
 			<h2>Fishing</h2>
-			<img class="inline_image" src="lake.jpg" alt="The one that got away"/>
+			<img class="inline_image" src="images/lake.jpg" alt="The one that got away"/>
 			
 				<p>		
 				The cold, clear water of Vermont’s lakes and streams provide excellent fishing opportunities throughout the state in a magnificent natural setting. Mountain streams are prime spots for brook, brown and rainbow trout. Our lakes and ponds are known for bass, walleye, pike and other species.
