--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
   <title>Lab 2 - Responsive</title>
   <meta name="description" content="Color Schemes">
-  <meta name="author" content="David Schadlich">
+  <meta name="author" content="David Schadlich, Jacob Hilton, Katie Lugus">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 
@@ -21,7 +21,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="activities.html">Activities</a></li>
 				<li><a href="reserve.html">Reservations</a></li>
-				<li><a href	="contact.html">Contact</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</span>
 	</div>
