added changes from jake

--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
 		<h1>Vermont</h1>
 
                 <hr style="border-color: white;">
-				<div id="slideShow">
-<!-- populate the slide show here -->
-					<img src="images/slide1.jpg" alt="" id="slide1" class="slideShow_image"/>
-					<img src="images/slide2.jpg" alt="" id="slide2" class="slideShow_image"/>
-					<img src="images/slide3.jpg" alt="" id="slide3" class="slideShow_image"/>
-					<img src="images/slide4.jpg" alt="" id="slide4" class="slideShow_image"/>
-					<img src="images/slide5.jpg" alt="" id="slide5" class="slideShow_image"/>
-					<img src="images/slide6.jpg" alt="" id="slide6" class="slideShow_image"/>
-					<img src="images/slide7.jpg" alt="" id="slide7" class="slideShow_image"/>
-					<img src="images/slide8.jpg" alt="" id="slide8" class="slideShow_image"/>
+                    <div id="slideShow">
+                        <!-- populate the slide show here -->
+			<img src="images/slide1.jpg" alt="" id="slide1" class="slideShow_image"/>
+			<img src="images/slide2.jpg" alt="" id="slide2" class="slideShow_image"/>
+			<img src="images/slide3.jpg" alt="" id="slide3" class="slideShow_image"/>
+			<img src="images/slide4.jpg" alt="" id="slide4" class="slideShow_image"/>
+			<img src="images/slide5.jpg" alt="" id="slide5" class="slideShow_image"/>
+			<img src="images/slide6.jpg" alt="" id="slide6" class="slideShow_image"/>
+			<img src="images/slide7.jpg" alt="" id="slide7" class="slideShow_image"/>
+			<img src="images/slide8.jpg" alt="" id="slide8" class="slideShow_image"/>
+                    </div>
 
-				</div>
-
-
+                <div>
                 <p>
                     Vermont is a state in the northeastern U.S. known for its
                     natural landscape, which is 75% forest. It's also known for
@@ -62,9 +61,10 @@
                     motels. Vermont’s natural beauty, range of venues, and short
                     distance to Boston, New York, and Montreal, make Vermont weddings ideal.
                 </p>
+                </div>
 
                 <hr style="border-color: white;">
-	</div>
+        </div>
 
 
 </body>
